--- a/PinBoard/composer.json
+++ b/PinBoard/composer.json
@@ -4,6 +4,7 @@
     "require": {
         "php": "^7.1.3",
         "sensio/framework-extra-bundle": "^5.1",
+        "symfony/asset": "^4.0",
         "symfony/console": "^4.0",
         "symfony/flex": "^1.0",
         "symfony/form": "^4.0",
@@ -11,8 +12,10 @@
         "symfony/lts": "^4@dev",
         "symfony/maker-bundle": "^1.0",
         "symfony/orm-pack": "^1.0",
+        "symfony/twig-bridge": "^4.0",
         "symfony/twig-bundle": "^4.0",
         "symfony/web-server-bundle": "^4.0",
+        "symfony/webpack-encore-pack": "^1.0",
         "symfony/yaml": "^4.0"
     },
     "require-dev": {
