--- a/PinBoard/config/routes.yaml
+++ b/PinBoard/config/routes.yaml
@@ -1,3 +1,3 @@
 app:
     path: /
-    controller: App\Controller\BoardController::index
+    controller: App\Controller\ServiceController::indexAction
