--- a/PinBoard/package.json
+++ b/PinBoard/package.json
@@ -14,6 +14,7 @@
         "jquery": "^3.2.1",
         "node-sass": "^4.7.2",
         "sass-loader": "^6.0.6",
+        "typed.js": "^2.0.6",
         "webpack-notifier": "^1.5.0"
     }
 }
