Registering user done, to do encrypt password

--- a/PinBoard/config/routes.yaml
+++ b/PinBoard/config/routes.yaml
@@ -13,3 +13,7 @@ admin:
 register:
     path: /register
     controller: App\Controller\RegisterController::indexAction
+
+registerUser:
+    path: /registeruser
+    controller: App\Controller\RegisterController::registerUserAction
