--- a/PinBoard/composer.json
+++ b/PinBoard/composer.json
@@ -14,6 +14,7 @@
         "symfony/orm-pack": "^1.0",
         "symfony/twig-bridge": "^4.0",
         "symfony/twig-bundle": "^4.0",
+        "symfony/validator": "^4.0",
         "symfony/web-server-bundle": "^4.0",
         "symfony/webpack-encore-pack": "^1.0",
         "symfony/yaml": "^4.0"
