Activating task done

--- a/PinBoard/config/routes.yaml
+++ b/PinBoard/config/routes.yaml
@@ -88,3 +88,7 @@ addJobEnName:
 addJobFrName:
     path: /addJobFrName
     controller: App\Controller\AdminController:addJobFrNameAction
+
+activateTask:
+    path: /activateTask/{id}
+    controller: App\Controller\AdminController::activateTaskAction
