--- a/PinBoard/config/routes.yaml
+++ b/PinBoard/config/routes.yaml
@@ -143,3 +143,7 @@ getUserIdsOrUsernames:
 searchTask:
     path: /admin/searchTask
     controller: App\Controller\AdminController:searchTaskAction
+
+sendMessageToUser:
+    path: /admin/sendMessageToUser
+    controller: App\Controller\AdminController:sendMessageToUserAction
