--- a/Remote/config/routes.yaml
+++ b/Remote/config/routes.yaml
@@ -1,162 +1,16 @@
-#Service Controller
-index:
-    path: /
-    controller: App\Controller\ServiceController::indexAction
+service_controller:
+    resource: 'routes/service.yaml'
 
-results:
-    path: /results
-    controller: App\Controller\ServiceController::resultsAction
+admin_controller:
+    resource: 'routes/admin.yaml'
 
-getTaskIds:
-    path: /getTaskIds
-    controller: App\Controller\ServiceController:getTaskIdsAction
+user_controller:
+    resource: 'routes/user.yaml'
 
-getJobsNames:
-    path: /getJobsNames
-    controller: App\Controller\ServiceController:getJobsNamesAction
+register_controller:
+    resource: 'routes/register.yaml'
 
-getCountries:
-    path: /getCountries
-    controller: App\Controller\ServiceController:getCountriesAction
-
-getAreas:
-    path: /getAreas
-    controller: App\Controller\ServiceController:getAreasAction
-
-getCities:
-    path: /getCities
-    controller: App\Controller\ServiceController:getCitiesAction
-
-getUserIdsOrUsernames:
-    path: /getUserIdsOrUsernames/{data}
-    controller: App\Controller\ServiceController:getUserIdsOrUsernamesAction
-
-
-
-#Admin Controller
-admin:
-    path: /admin
-    controller: App\Controller\AdminController::indexAction
-
-searchTask:
-    path: /admin/searchTask
-    controller: App\Controller\AdminController:searchTaskAction
-
-sendMessageToUser:
-    path: /admin/sendMessageToUser
-    controller: App\Controller\AdminController:sendMessageToUserAction
-
-addNewAreaName:
-    path: /addNewAreaName
-    controller: App\Controller\AdminController::addNewAreaNameAction
-
-addJobEnName:
-    path: /addJobEnName
-    controller: App\Controller\AdminController:addJobEnNameAction
-
-addJobFrName:
-    path: /addJobFrName
-    controller: App\Controller\AdminController:addJobFrNameAction
-
-activateTask:
-    path: /activateTask/{id}/{userId}
-    controller: App\Controller\AdminController::activateTaskAction
-
-deactivateTask:
-    path: /deactivateTask/{id}/{userId}
-    controller: App\Controller\AdminController:deactivateTaskAction
-
-addNewJobName:
-    path: /addNewJobName
-    controller: App\Controller\AdminController::addNewJobNameAction
-
-addNewCountryName:
-    path: /addNewCountryName
-    controller: App\Controller\AdminController::addNewCountryNameAction
-
-adminRemoveTask:
-    path: /admin/remove/task/{id}/{userId}
-    controller: App\Controller\AdminController:removeTaskAction
-
-userDetails:
-    path: /admin/user/{id}
-    controller: App\Controller\AdminController:userDetailsAction
-
-
-
-#User Controller
-panel:
-    path: /panel
-    controller: App\Controller\UserController::indexAction
-
-addTask:
-    path: /addTask
-    controller: App\Controller\UserController::addTaskAction
-
-editTask:
-    path: /edit/task/{id}
-    controller: App\Controller\UserController::editTaskAction
-
-removeTask:
-    path: /remove/task/{id}
-    controller: App\Controller\UserController:removeTaskAction
-
-searchAreaInCountry:
-    path: /searchAreaInCountry
-    controller: App\Controller\UserController::searchAreaInCountryAction
-
-addUserLangs:
-    path: /addUserLangs
-    controller: App\Controller\UserController::addUserLangsAction
-
-searchJobs:
-    path: /searchJobs/{lang}
-    controller: App\Controller\UserController::searchJobsAction
-
-searchCountries:
-    path: /searchCountries/{lang}
-    controller: App\Controller\UserController::searchCountriesAction
-
-
-
-#Register Controller
-checkUsernameAvaibility:
-    path: /checkUsernameAvaibility
-    controller: App\Controller\RegisterController::checkUsernameAvaibilityAction
-
-register:
-    path: /register
-    controller: App\Controller\RegisterController::indexAction
-
-addUserToDB:
-    path: /registerUser
-    controller: App\Controller\RegisterController::registerUserAction
-
-sendRegisterMail:
-    path: /sendRegisterMail
-    controller: App\Controller\RegisterController::sendRegisterMailAction
-
-activationLink:
-    path: /activateUser/{username}/{time}
-    controller: App\Controller\RegisterController::activateUserAction
-
-
-
-#Login Controller
-loginForm:
-    path: /login
-    controller: App\Controller\LoginController::indexAction
-
-loginUser:
-    path: /loginUser
-    controller: App\Controller\LoginController::loginAction
-
-logoutUser:
-    path: /logoutUser
-    controller: App\Controller\LoginController::logoutAction
-
-resetPassword:
-    path: /resetPassword
-    controller: App\Controller\LoginController::resetPasswordAction
+login_controller:
+    resource: 'routes/login.yaml'
 
 
